--- a/src/credit/Credit.css
+++ b/src/credit/Credit.css
@@ -1,6 +1,5 @@
 .pfoot {
   background-color: hsla(33, 37%, 23%, 0.7);
-  margin: 26.2969px;
   padding: 10px;
   width: 180px;
   color: white;
